Optimized list "get" to start from last item if its index is closer.